# deepx-op-gpukernelcompiler

./: .gitignore  analyze_fusions.py  compile_worker.py  kvfunc.py  pyproject.toml  read_func.py  run_fusion.py  test_compilable.py  workflow.py
deepx_op_gpukernelcompiler/: __init__.py  fusion.py  kernel.py  kernel_tilelang.py  kernel_triton.py  kvfunc.py  workflow.py
doc/: kernel-compiler-analysis.md  kvlang-to-tilelang-interface.md
test/: compile_and_run.py  inference.kv  test_tilelang_kernel.py
test/fusion_cases/: 01_linear.kv  02_linear_relu.kv  03_linear_gelu.kv  04_linear_silu.kv  05_linear_swish.kv  06_ffn_two_layer.kv  07_ffn_gated.kv  08_ffn_swiglu.kv  09_ffn_deepseek_moe.kv  10_ffn_sequential.kv  11_attention_score.kv  12_attention_softmax.kv  13_attention_output.kv  14_qkv_projection.kv  15_mha_forward.kv  16_layernorm.kv  17_rmsnorm.kv  18_batchnorm.kv  19_groupnorm.kv  20_pre_norm_linear.kv  21_conv2d.kv  22_conv2d_relu.kv  23_resnet_block.kv  24_conv_bn_relu.kv  25_depthwise_conv.kv  26_embedding_lookup.kv  27_cross_entropy.kv  28_residual_add_norm.kv  29_lora_forward.kv  30_kv_cache_update.kv
